Fixed gap-left for footer

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -11,3 +11,10 @@
   grid-template-columns: repeat(auto-fit, 282px);
   grid-gap: 20px 17px;
 }
+
+@media screen and (max-width: 320px) {
+  .cards {
+    margin: 0;
+    padding-top: 36px;
+  }
+}
