--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,5 +2,5 @@
   width: 100%;
   /* margin-top: 45px; */
   padding-top: 45px;
-  padding-bottom: 40px;
+  padding-bottom: 42px;
 }
